@@ -7,7 +7,7 @@ authors:
 relates:
 ---
         
-Hey there, fellow code warriors! Today, we're diving deep into the fascinating world of Java Memory Management and Garbage Collecton. Buckle up - it's going to be a wild ride through heap spaces, memory leaks, and zombie objects!
+Hey there, fellow code warriors! Today, we're diving deep into the fascinating world of Java Memory Management and Garbage Collection. Buckle up - it's going to be a wild ride through heap spaces, memory leaks, and zombie objects!
 
 ## Contents
 
@@ -25,9 +25,11 @@ public class BabyObject {
 
 Just like human babies, objects are born with great expectations. Some become important service classes handling critical business logic. Others might end up as humble DTOs, carrying data from one place to another like dedicated postal workers. But unlike humans, objects can be cloned(try doing that with your co-worker, Karen from accounting)
 
+But remember, in Java, your lifespan isn't determined by age but by references. As long as someone holds a reference to you, you're alive and kicking. Lose all your references, and you are on the GC's hit list!
+
 ## 2. Garbage Collection: The Clean-Up Crew
 
-Remember that time you forgot to clean your room, and your mon threatened to throw everything away? Well, that's basically what the Gabage Collector does, except it's actually helpful and doesn't threaten to ground you!
+Remember that time you forgot to clean your room, and your mon threatened to throw everything away? Well, that's basically what the Garbage Collector does, except it's actually helpful and doesn't threaten to ground you!
 
 ```java
 public void messyCode() {
@@ -39,6 +41,16 @@ public void messyCode() {
 ```
 
 The GC is like that friend who helps you move apartments and isn't afraid to ask, "Do you really need this object from 2015 that you never reference anymore?" If an object has no references pointing to it, it's basically the Marie Kondo principle: if it doesn't spark joy(or references), out it goes!
+
+In this example, `tempStr` is created a new in each iteration and becomes unreachable immediately after, making it prime GC fodder.
+
+The GC process involves:
+
+1. **Marking**: Identifying all reachable objects.
+2. **Sweeping**: Collecting all unreferenced objects.
+3. **Compacting**: Rearranging memory to eliminate fragmentation.
+
+This ensures that your application doesn't become a memory wasteland, filled with orphaned objects and sad references.
 
 ## 3. Memory Leaks: The Horror Stories and How to deal with it
 
@@ -56,11 +68,11 @@ public class MemoryLeekExample {
 }
 ```
 
-But fear not! Here's how to fight these memory-hungry monsters:
+To combat these memory-hungry monsters:
 
-1. Use proper data structures
-2. Close your resource
-3. Watch out for static collections
+1. Use appropriate data structures: Choose collections that suit your needs and don't retain unnecessary references.
+2. Close your resources: Always release resources like files, sockets, or database connections promptly.
+3. Be cautious with static collections: They live as long as the application does, so ensure they don't hold onto objects longer than necessary.
 
 ```java
 // The right way to handle resources
@@ -73,7 +85,31 @@ try (FileInputStream fis = new FileInputStream("important.txt")) {
 
 Remember: Memory leaks are like vampires - they suck the life out of your application, but they can't enter unless you invite them in (through bad coding practices).
 
-## 4. Conclusion
+## 4. Advanced GC: The Generational Saga
+
+Java's Garbage Collection is sophisticated, employing a generational approach to optimize performance:
+
+- Young Generation: Where all new objects are allocated. It's further divided into Eden and Survivor spaces. Most objects die young, so this area is collected frequently.
+- Old Generation (Tenured): Objects that survive multiple GC cycles in the Young Generation are promoted here. Collections are less frequent but more time-consuming.
+- Permanent Generation (PermGen): Stores metadata about classes. Note: In Java 8 and above, PermGen has been replaced by Metaspace.
+
+This generational model is based on the empirical observation that most objects die young, allowing the GC to focus its efforts where they're most needed.
+
+## 5. GC Algorithms: The Avengers of Memory Management
+
+Java offers several Garbage Collection algorithms. Let's take a look at some of the most popular ones:
+
+| **GC Algorithm** | **Use Case** | **Pros** | **Cons** | **Enable With** |
+|------------------|--------------|----------|----------|-----------------|
+| **Serial GC** | Suitable for single-threaded applications or environments with limited memory. | Simple and low overhead; efficient for small applications. | Stops all application threads during GC; not suitable for multi-threaded applications. | `-XX:+UseSerialGC` |
+| **Parallel GC** | Applications requiring high throughput in multi-threaded environments. | Utilizes multiple threads for GC, leading to improved throughput. | Longer pause times compared to other algorithms; higher CPU usage. | `-XX:+UseParallelGC` |
+| **Concurrent Mark Sweep (CMS)** | Applications needing low pause times and can share processor resources with GC. | Performs most GC work concurrently, reducing pause times. | Fragmentation issues; deprecated in Java 9 and removed in Java 14. | `-XX:+UseConcMarkSweepGC` |
+| **G1 (Garbage First) GC** | Applications requiring balanced performance with large heaps. | Predictable pause times; region-based collection. | More complex tuning; slightly higher overhead. | `-XX:+UseG1GC` |
+| **ZGC (Z Garbage Collector)** | Applications requiring very low latency with large heaps. | Handles large heaps with minimal pauses; scalable. | Still evolving; limited support on some platforms. | `-XX:+UnlockExperimentalVMOptions -XX:+UseZGC` |
+| **Shenandoah GC** | Applications needing responsiveness and short pause times, irrespective of heap size. | Concurrent compaction; short pause times independent of heap size. | Requires specific JVM versions; higher CPU usage. | `-XX:+UseShenandoahGC` |
+| **Epsilon GC** | Performance testing or applications with short lifespans. | No GC overhead; useful for benchmarking. | No memory reclamation; will lead to OutOfMemoryError if memory is exhausted. | `-XX:+UseEpsilonGC` |
+
+## 6. Conclusion
 
 Java's memory management is like a well-oiled machine, but even well-oiled machines need maintenance and understanding. Keep an eye on your object lifecycles, choose the right GC algorithm for your needs, and remember: with great memory comes great responsibility!
 
